# cookiecutter-template-sample

./: .cruft.json  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONFIG_TEMPLATES_SUMMARY.md  CONTRIBUTING.md  README.md  REUSE.toml  codecov.yml  mkdocs.yml  noxfile.py  pyproject.toml  renovate.json
.claude/: README.md  claude.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: README.md  ci.yml  docs.yml  publish-pypi.yml  python-compatibility.yml  release.yml  reuse.yml  sbom.yml  scorecard.yml  security-analysis.yml  slsa-provenance.yml  validate-cruft.yml
.qlty/: qlty.toml
docs/: OPENSSF_COMPLIANCE.md  PROJECT_SETUP.md  PYTHON_COMPATIBILITY.md
docs/ADRs/: README.md
docs/_data/: owners.yml
docs/planning/: project-plan-template.md
fuzz/: README.md  fuzz_input_validation.py
scripts/: README.md  check_quality_gate.py  setup_github_protection.py  validate_assuredoss.py
src/my_python_project/: __init__.py  cli.py
src/my_python_project/core/: __init__.py  config.py
src/my_python_project/utils/: __init__.py  financial.py  logging.py
tests/: conftest.py  test_example.py
tests/integration/: __init__.py
tests/unit/: __init__.py
