# NOTE: This project uses UV as the package manager.
# Dependencies are defined in [project.dependencies] and [project.optional-dependencies] sections below.
# UV uses standard PEP 621 pyproject.toml format with uv.lock for reproducible builds.
[project]
name = "my-python-project"
version = "0.1.0"
description = "A short description of the project"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

# Core production dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    "click>=8.1.0",
    # Cross-Version Compatibility Dependencies
    # =========================================
    # This template targets Python 3.10-3.14. Add version-specific dependencies
    # here if your code needs compatibility shims or replacements.
    #
    # COMMON BACKPORTS FOR 3.10 COMPATIBILITY:
    #   "tomli>=2.0.0; python_version < '3.11'",  # TOML parser (tomllib added in 3.11)
    #   "exceptiongroup>=1.1.0; python_version < '3.11'",  # Exception groups (added in 3.11)
    #   "typing-extensions>=4.12.0",  # Backport newer typing features
    #
    # AVAILABLE IN 3.11+:
    #   - tomllib: Native TOML parser
    #   - asyncio.TaskGroup: Structured concurrency
    #   - typing.Self, TypeVarTuple, Never, LiteralString
    #   - ExceptionGroup and except* syntax
    #
    # PEP 594 REMOVALS IN 3.13 (add replacements if needed):
    #   Removed modules: aifc, audioop, cgi, cgitb, chunk, crypt, imghdr, mailcap,
    #   msilib, nis, nntplib, ossaudiodev, pipes, sndhdr, spwd, sunau, telnetlib,
    #   uu, xdrlib
    #
    # Examples of version-specific dependencies:
    #   # Backport for Python 3.10
    #   "tomli>=2.0.0; python_version < '3.11'",
    #
    #   # Replacement for removed modules in 3.13+
    #   "legacy-cgi>=2.6.1; python_version >= '3.13'",  # If you need cgi module
    #   "filetype>=1.2.0",  # Better alternative to imghdr/sndhdr
    #
    #   # Typing enhancements
    #   "typing-extensions>=4.12.0; python_version < '3.13'",  # For latest typing features
    #
    # PYTHON 3.14+ CONSIDERATIONS:
    #   - from __future__ import annotations is deprecated (but still works until 2029+)
    #   - Free-threaded mode (python3.14t) may need GIL-compatible packages
    #   - NotImplemented in boolean context raises TypeError (was warning)
    #   - PEP 649: Deferred annotation evaluation (impacts runtime introspection)
    #
    # Examples for 3.14+ compatibility:
    #   # Free-threaded mode support (check package documentation)
    #   "numpy>=2.1.0; python_version >= '3.14'",  # Supports free-threaded mode
    #
    # UV handles these automatically based on the Python version being used.
    # See: https://docs.astral.sh/uv/concepts/dependencies/#dependency-specifiers
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",

    # Code Quality (always included)
    "ruff>=0.9.0",
    "mypy>=1.4.0",
    "bandit>=1.7.0",

    # Pre-commit
    "pre-commit>=3.3.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.0",
    # Development Tools
    "interrogate>=1.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "safety>=3.7.0",
    "nox>=2024.10.16",  # Fixed: was 2025 (typo)
    "nox-uv>=0.6.3",    # Fixed: max available version is 0.6.3, not 1.0.0
    "mutmut>=3.3.1",

    # Google Cloud Assured OSS (optional - uncomment if using Assured OSS)
    "google-auth>=2.0.0",
    # "google-cloud-assured-oss>=0.1.0",  # Package not yet available in PyPI
    "google-api-core>=2.0.0",
    "python-dotenv>=1.0.0",  # For loading .env files
]








[project.scripts]
my_python_project = "my_python_project.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_python_project"]

# Ruff Configuration - Consolidated Linting & Formatting
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "PERF", # Performance anti-patterns
    "FURB", # Refurb - modernization
    "LOG",  # Logging best practices
    "TRY",  # Exception handling
    "ERA",  # Commented-out code
    "FBT",  # Boolean trap detection
    "ASYNC",# Async/await best practices
]

ignore = [
    # Formatting
    "E501",   # line too long (handled by formatter)
    "COM812", # missing trailing comma (handled by formatter)
    "ISC001", # implicit string concatenation (handled by formatter)

    # Complexity - NOTE: C901 is NOT ignored, enforce max-complexity below
    # "C901" - Removed to enable complexity checking (Google compliance)

    # Docstring (Google style)
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-docstring-summary-first-line (conflicts with D213)

    # Practical exceptions
    "B008",   # function calls in defaults (Pydantic/FastAPI pattern)
    "S101",   # assert (pytest uses assert statements)
    "D105",   # missing docstring in magic method (excessive for __str__, etc.)
    "D107",   # missing docstring in __init__ (class docstring usually sufficient)
    "PTH123", # open() vs pathlib (sometimes direct open is clearer)
    "FBT001", # Boolean positional arg (sometimes acceptable in DSLs)
    "FBT002", # Boolean default arg (sometimes acceptable in DSLs)
    "TRY003", # Long exception messages (descriptive messages are good)
]

# McCabe Complexity Configuration (Google/Pylint alignment)
[tool.ruff.lint.mccabe]
max-complexity = 10  # Google/Pylint default, stricter than we had

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["my_python_project"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = ["ARG", "D", "S", "ERA"]
"scripts/**/*.py" = ["D", "T20", "TRY", "S", "PTH"]
"benchmarks/**/*.py" = ["D", "T20", "ARG", "TRY"]
"tools/**/*.py" = ["D", "T20", "TRY"]
"noxfile.py" = ["D", "T20"]
# MyPy Configuration
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/my_python_project",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "py310: marks tests specific to Python 3.10",
    "py311plus: marks tests requiring Python 3.11+",
    "py313plus: marks tests requiring Python 3.13+ (PEP 594 removals)",
    "py314plus: marks tests requiring Python 3.14+ (free-threaded, PEP 649)",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Test files
    "*/tests/*",
    "*/test_*.py",

    # Python internals
    "*/__pycache__/*",
    "*/site-packages/*",

    # Development artifacts (from image_detection best practices)
    "validation/*",     # Validation/verification scripts
    "benchmarks/*",     # Benchmarking framework
    "data/*",           # Data processing scripts
    "scripts/*",        # Utility scripts
    "notebooks/*",      # Jupyter notebooks
    "tmp_cleanup/*",    # Temporary files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# Interrogate Configuration (Docstring Coverage)
[tool.interrogate]
verbose = 1
fail-under = 85
exclude = ["tests", "docs", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
color = true

# Mutation Testing Configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "uv run pytest -x --assert=plain -o addopts=''"
tests_dir = "tests/"
dict_synonyms = "Struct, NamedStruct"

# Bandit Security Configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = []
tests = [
    "B201",  # flask_debug_true
    "B301",  # pickle
    "B302",  # marshal
    "B303",  # md5
    "B304",  # ciphers
    "B305",  # cipher_modes
    "B306",  # mktemp_q
    "B307",  # eval
    "B308",  # mark_safe
    "B309",  # httpsconnection
    "B310",  # urlopen
    "B311",  # random
    "B312",  # telnetlib
    "B313",  # xml_bad_cElementTree
    "B314",  # xml_bad_ElementTree
    "B315",  # xml_bad_expat_reader
    "B316",  # xml_bad_expat_builder
    "B317",  # xml_bad_sax
    "B318",  # xml_bad_pulldom
    "B319",  # xml_bad_etree
    "B320",  # xml_bad_etree_iterparse
    "B321",  # pickle_load
    "B322",  # unverified_context
    "B323",  # unverified_ftp
    "B324",  # hashlib
    # B325 removed - invalid test ID in current Bandit version
]

# UV Configuration
[tool.uv]
# Note: UV now recommends using [dependency-groups] instead of dev-dependencies
# We use [project.optional-dependencies] for dev dependencies (PEP 621 standard)

# Package Index Configuration
# Google Assured OSS as primary source with PyPI fallback
# See .env.example for required Google Cloud credentials and configuration
#
# Indexes are configured at runtime via environment variables:
# - GOOGLE_CLOUD_PROJECT: Your GCP project ID
# - ASSURED_OSS_REGION: Region (us, europe, asia)
# - ASSURED_OSS_REPOSITORY: Repository name (default: assuredoss)
# - USE_ASSURED_OSS: Enable/disable Assured OSS (true/false)
#
# Index URL format:
# https://{ASSURED_OSS_REGION}-python.pkg.dev/{GOOGLE_CLOUD_PROJECT}/{ASSURED_OSS_REPOSITORY}/simple/
#
# UV automatically falls back to PyPI when packages are not found in Assured OSS.
# Authentication uses GOOGLE_APPLICATION_CREDENTIALS or GOOGLE_APPLICATION_CREDENTIALS_B64.
